--- a/setup/package.json
+++ b/setup/package.json
@@ -19,7 +19,8 @@
     "monday-ui-react-core": "^1.54.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "recharts": "^2.1.13"
   },
   "eslintConfig": {
     "extends": "react-app"
