--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "monday-integration-quickstart-app",
   "version": "0.0.1",
   "private": true,
-  "homepage": "/",
+  "homepage": "/widget",
   "scripts": {
     "start": "npm run stop && concurrently \"npm run server\" \"npm run expose\"",
     "build": "react-scripts build",
@@ -20,6 +20,7 @@
     "monday-ui-react-core": "^1.54.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "recharts": "^2.1.13"
   },
